# CopilotAgent

./: agent.py  copilot.py  embedding.py  main.py  pyproject.toml
data/: app_configuration.md
